# gl-iam-cookbook

./: .gitignore  CLAUDE.md  README.md
agent-iam/agent-cross-service/: .env.example
agent-iam/agent-delegation-chain/: README.md
agent-iam/agent-delegation-django/: README.md
agent-iam/agent-delegation-fastapi/: README.md  pyproject.toml
agent-iam/agent-keycloak/: README.md  docker-compose.yml  main.py  realm-export.json  setup.bat  setup.sh
agent-iam/agent-scope-constraints/: README.md
agent-iam/agent-stackauth/: get_token.py  pyproject.toml  setup.bat
agent-iam/aip-integration-advanced/: README.md
exploration/agent-iam-delegation-e2e/: .env.example  Makefile  aip_backend.py  connectors.py  demo.sh  glchat_be.py  pyproject.toml
exploration/keycloak/: README.md  pyproject.toml
exploration/keycloak/docs/: stackauth_compatibility.md
exploration/keycloak/realm/: realm-export.json
exploration/keycloak/scripts/: gen-certs.sh
exploration/keycloak/src/keycloak_dpop_mtls/: dpop.py  keygen.py
exploration/keycloak/tests/: test_dpop.py
explorations/token-refresh-for-long-running-agents/: .env.example  README.md  background_demo.py  pyproject.toml  setup.sh
gl-iam/: README.md
gl-iam/examples/agent-cross-service/: README.md  pyproject.toml  service_a.py  service_b.py  setup.bat  setup.sh
gl-iam/examples/aip-integration/: .env.example  README.md  main.py  pyproject.toml  setup.bat  setup.sh
gl-iam/examples/aip-integration-advanced/: README.md  main.py  pyproject.toml  setup.bat  setup.sh
gl-iam/examples/api-key-hierarchy/: main.py  pyproject.toml  requirements.txt
gl-iam/examples/api-key-hierarchy/demo/: __init__.py  bootstrap_demo.py  child_keys_demo.py  hierarchy_demo.py  organization_demo.py  validation_demo.py
gl-iam/examples/api-key-hierarchy/providers/: __init__.py  api_key_provider.py
gl-iam/examples/api-key-hierarchy/services/: key_service.py
gl-iam/examples/django-keycloak/: .env.example  README.md  pyproject.toml  setup.bat  setup.sh
gl-iam/examples/django-keycloak/gliam_demo/: settings.py  urls.py  wsgi.py
gl-iam/examples/django-keycloak/gliam_demo/api/: apps.py  urls.py  views.py
gl-iam/examples/django-postgresql/: .env.example  README.md  pyproject.toml  setup.bat  setup.sh
gl-iam/examples/django-postgresql/gliam_demo/: settings.py  wsgi.py
gl-iam/examples/django-postgresql/gliam_demo/api/: apps.py  serializers.py  urls.py  views.py
gl-iam/examples/dpop-keycloak/: .env.example  README.md  create_proof.py  docker-compose.yml  generate_key.py  main.py  pyproject.toml  setup.bat  setup.sh
gl-iam/examples/dpop-keycloak/keys/: jwk.json  private_key.pem
gl-iam/examples/fastapi-postgresql/: .env.example  README.md  main.py  pyproject.toml  setup.bat  setup.sh
gl-iam/examples/rbac-showcase/: README.md  config.py  deps.py  main.py  pyproject.toml  realm-export.json  setup.bat  setup.sh
gl-iam/examples/rbac-showcase/routers/: __init__.py  admin.py
gl-iam/examples/third-party-integration/: .env.example  main.py  pyproject.toml  pyrightconfig.json  setup.sh
gl-iam/examples/third-party-integration/connectors/: __init__.py  base.py
gl-iam/explorations/agent-iam-dashboard/: Makefile  README.md  pyproject.toml
gl-iam/explorations/agent-iam-dashboard/backend/: aip_backend.py  connectors.py  glchat_be.py  mock_data.py  scenarios.py  shared.py
gl-iam/explorations/agent-iam-dashboard/dashboard/: index.html
gl-iam/explorations/agent-iam-dashboard/dashboard/src/: App.tsx  index.css
gl-iam/explorations/agent-iam-dashboard/dashboard/src/components/audit/: AuditTimeline.tsx
gl-iam/explorations/agent-iam-dashboard/dashboard/src/components/delegation/: AgentConfigPanel.tsx  CredentialPolicyPanel.tsx  DelegationFlow.tsx  EnforcementMatrix.tsx  PolicyDecisionTrace.tsx  ScopeAttenuationTable.tsx
gl-iam/explorations/agent-iam-dashboard/dashboard/src/components/layout/: Header.tsx
gl-iam/explorations/agent-iam-dashboard/dashboard/src/components/results/: ChatSimulation.tsx  ExecutionLog.tsx  ToolResultCard.tsx
gl-iam/explorations/agent-iam-dashboard/dashboard/src/components/scenario/: ScenarioBuilder.tsx  ScenarioPicker.tsx  ScenarioRunner.tsx
gl-iam/explorations/agent-iam-dashboard/dashboard/src/components/setup/: ServiceHealth.tsx  SetupPanel.tsx
gl-iam/explorations/agent-iam-dashboard/dashboard/src/components/token/: TokenInspector.tsx
gl-iam/explorations/agent-iam-dashboard/dashboard/src/components/ui/: dialog.tsx
gl-iam/explorations/agent-iam-dashboard/dashboard/src/hooks/: use-demo-state.ts
gl-iam/explorations/agent-iam-dashboard/dashboard/src/pages/: AuditPage.tsx  ComparisonPage.tsx  DemoPage.tsx
traditional-iam/django-stackauth/: .env.example  README.md  pyproject.toml  setup.bat
traditional-iam/django-stackauth/gliam_demo/: __init__.py  urls.py
traditional-iam/django-stackauth/gliam_demo/api/: apps.py  serializers.py
traditional-iam/dpop-standalone/: .env.example  README.md  create_proof.py  generate_key.py  issue_token.py  main.py  pyproject.toml  setup.sh
traditional-iam/sso-glchat-production/: .env.example  Makefile  README.md  docker-compose.yml  pyproject.toml  setup.sh
traditional-iam/sso-glchat-production/frontends/glchat_admin/: index.html
traditional-iam/sso-glchat-production/frontends/glchat_widget/: index.html
traditional-iam/sso-glchat-production/frontends/partner_site/: index.html
traditional-iam/sso-glchat-production/glchat_backend/: audit.py  config.py  main.py  pretty_log.py
traditional-iam/sso-glchat-production/glchat_backend/middleware/: audit_context.py  csp.py  rate_limit.py
traditional-iam/sso-glchat-production/glchat_backend/routers/: admin.py  auth.py  sso.py
traditional-iam/sso-glchat-production/glchat_backend/services/: nonce_store.py  sso_service.py  token_store.py
traditional-iam/sso-glchat-production/partner_backend/: hmac_signer.py  main.py
traditional-iam/sso-glchat-production/scripts/: bootstrap_admin.py  bootstrap_partner.py  demo_e2e.py  serve_frontends.py
traditional-iam/sso-jwt-bridge/: .env.example  pyproject.toml
(+208 files in other folders)
