[project]
name = "sso-glchat-production"
version = "0.0.0"
description = "Production-grade IdP-Initiated SSO cookbook: GLChat + Trusted Partner with Redis, audit trail, rate limiting, admin auth, CSP, nonce protection"
requires-python = ">=3.11,<3.14"
readme = "README.md"
dependencies = [
  "fastapi>=0.115.0,<0.116.0",
  "uvicorn>=0.34.0,<0.35.0",
  "python-dotenv>=1.0.0,<2.0.0",
  "httpx>=0.27.0,<0.28.0",
  "redis[hiredis]>=5.0.0,<6.0.0",
  "slowapi>=0.1.9,<0.2.0",
  "itsdangerous>=2.2.0,<3.0.0",
  "gl-iam[fastapi,postgresql]",
]

[tool.uv.sources]
gl-iam = { git = "https://github.com/GDP-ADMIN/gl-sdk.git", subdirectory = "libs/gl-iam", branch = "main" }
