[project]
name = "api-key-hierarchy"
version = "0.0.0"
description = "GL-IAM API Key Hierarchy example demonstrating SOLID patterns"
requires-python = ">=3.11,<3.14"
readme = "README.md"
dependencies = [
  "pydantic-settings>=2.0.0",
  "python-dotenv>=1.0.0",
  "asyncpg>=0.29.0",
  "sqlalchemy[asyncio]>=2.0.0",
  "gl-iam[postgresql]",
]

[tool.uv.sources]
gl-iam = { git = "https://github.com/GDP-ADMIN/gl-sdk.git", subdirectory = "libs/gl-iam", branch = "release/gl-iam/v0.1.x" }
