[project]
name = "dpop-keycloak"
version = "0.0.0"
description = "DPoP with Keycloak - FastAPI Resource Server"
requires-python = ">=3.11,<3.14"
readme = "README.md"
dependencies = [
  "fastapi>=0.115.0,<0.116.0",
  "uvicorn>=0.34.0,<0.35.0",
  "python-dotenv>=1.0.0,<2.0.0",
  "httpx>=0.28.0",
  "pyjwt>=2.8.0,<3.0.0",
  "cryptography>=43.0.0,<47.0.0",
  "gl-iam[fastapi,keycloak]",
]

[tool.uv.sources]
# change to main or release branch (release/gl-iam/vx.x.x) after merging
gl-iam = { git = "https://github.com/GDP-ADMIN/gl-sdk.git", subdirectory = "libs/gl-iam", branch = "feat/gl-iam/keycloak-dpop-provider" }
